--- a/lab_07_keras_examples_iris_kfold_callback_rev2.ipynb
+++ b/lab_07_keras_examples_iris_kfold_callback_rev2.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "kernelspec": {
       "display_name": "Python 3",
-      "language": "python",
       "name": "python3"
     },
     "language_info": {
@@ -25,10 +24,10 @@
         "4xpM5TEGZSy_"
       ],
       "toc_visible": true,
+      "gpuType": "T4",
       "include_colab_link": true
     },
-    "accelerator": "GPU",
-    "gpuClass": "standard"
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -84,7 +83,7 @@
         "%matplotlib inline\n",
         "import numpy as np"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -95,14 +94,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
-        "outputId": "1088f2c0-2496-4937-cc66-38d81fb1de91"
+        "outputId": "9bb70f5f-18c1-4034-a8a3-f4a795435e30"
       },
       "source": [
         "np.random.seed(17)\n",
         "iris_data = sns.load_dataset(\"iris\")\n",
         "iris_data.head()"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -117,7 +116,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-5ae2f27d-44de-430c-96f2-ce001ffc84bd\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-47aa256b-7e7f-4bf0-8d9d-5ccd27951fc1\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -190,7 +189,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5ae2f27d-44de-430c-96f2-ce001ffc84bd')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-47aa256b-7e7f-4bf0-8d9d-5ccd27951fc1')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -242,12 +241,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-5ae2f27d-44de-430c-96f2-ce001ffc84bd button.colab-df-convert');\n",
+              "        document.querySelector('#df-47aa256b-7e7f-4bf0-8d9d-5ccd27951fc1 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-5ae2f27d-44de-430c-96f2-ce001ffc84bd');\n",
+              "        const element = document.querySelector('#df-47aa256b-7e7f-4bf0-8d9d-5ccd27951fc1');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -267,8 +266,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-1a9a3418-45d3-42f4-a731-a54d15495e2f\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-1a9a3418-45d3-42f4-a731-a54d15495e2f')\"\n",
+              "<div id=\"df-b20e36d2-efbc-461c-b6bf-e98e62675423\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b20e36d2-efbc-461c-b6bf-e98e62675423')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -387,7 +386,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-1a9a3418-45d3-42f4-a731-a54d15495e2f button');\n",
+              "        document.querySelector('#df-b20e36d2-efbc-461c-b6bf-e98e62675423 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -398,7 +397,33 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "iris_data.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Xqyoq2MrOxO_",
+        "outputId": "319d0177-8ac6-4594-ff02-45b72d7333da"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(150, 5)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
         }
       ]
     },
@@ -417,7 +442,7 @@
         "\n",
         "X_train, X_test, Y_train, Y_test = train_test_split(X, Y_encoded, test_size=0.2)"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -427,12 +452,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mKjSkSrjPS_s",
-        "outputId": "abd20f51-b8d0-4fe1-fcba-43905940e610"
+        "outputId": "9b0a8b47-14e5-47f9-cde8-87242b5be850"
       },
       "source": [
         "X_train.shape, Y_train.shape, X_test.shape, Y_test.shape"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -442,7 +467,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 35
+          "execution_count": 6
         }
       ]
     },
@@ -453,7 +478,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5eded266-8267-4d0f-d854-8ca325ff6515"
+        "outputId": "cca98a0f-28d5-42c7-beec-2b09ea50f34b"
       },
       "source": [
         "# model and compile & train & predict(evaluate)\n",
@@ -463,7 +488,7 @@
         "model.add(Dense(3, activation='softmax'))\n",
         "model.summary()"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -493,18 +518,18 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "43e7c9f8-c981-4026-d235-47b7020c45ac"
+        "outputId": "879a37f7-d220-400e-efc4-a387b7af074b"
       },
       "source": [
         "model.compile(loss='categorical_crossentropy',\n",
-        "            optimizer='adam',\n",
-        "            metrics=['accuracy'])\n",
+        "              optimizer='adam',\n",
+        "              metrics=['accuracy'])\n",
         "\n",
         "history = model.fit(X_train, Y_train, epochs=100,\n",
-        "                    batch_size=20, verbose=0)\n",
+        "                    batch_size=32, verbose=0)\n",
         "model.save('iris_model.h5')     # or model.save('iris_model_dir')"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -526,9 +551,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "N2q4AUIxCg_8",
-        "outputId": "4a5c47da-bcc0-449f-d04d-e1559a40519d"
+        "outputId": "bad4ef76-cc87-46e0-89d6-254d7e39e960"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -538,7 +563,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 9
         }
       ]
     },
@@ -549,7 +574,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5e05ae93-b41f-482f-b5f2-31dd0d639c9c"
+        "outputId": "f9676b15-133e-47fd-ec0e-96a01a1b570b"
       },
       "source": [
         "from keras.models import load_model\n",
@@ -557,15 +582,15 @@
         "model = load_model('iris_model.h5')  # newly call the model\n",
         "print(\"\\n Accuracy: %.4f\" % (model.evaluate(X_test, Y_test)[1]))"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1/1 [==============================] - 0s 180ms/step - loss: 0.3575 - accuracy: 0.9333\n",
+            "1/1 [==============================] - 0s 161ms/step - loss: 0.5388 - accuracy: 0.8333\n",
             "\n",
-            " Accuracy: 0.9333\n"
+            " Accuracy: 0.8333\n"
           ]
         }
       ]
@@ -580,26 +605,26 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7gBt0ERNC5FZ",
-        "outputId": "295cab9e-9e5d-4916-c93c-020eadd8b09e"
+        "outputId": "9f174317-7068-4fd3-ac27-5bb4b0247943"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1/1 [==============================] - 0s 27ms/step - loss: 0.3575 - accuracy: 0.9333\n"
+            "1/1 [==============================] - 0s 31ms/step - loss: 0.5388 - accuracy: 0.8333\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[0.35750478506088257, 0.9333333373069763]"
+              "[0.5388433337211609, 0.8333333134651184]"
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 11
         }
       ]
     },
@@ -830,7 +855,7 @@
         "id": "KitK6yZf7uzE"
       },
       "source": [
-        "# K-fold validation\n",
+        "# K-fold cross validation\n",
         "- Keras does not have a direct equivalent to 'cross_val_score()' from sklearn."
       ]
     },
